--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
 		"whatsapp",
 		"bot"
 	],
-	"repository": "https://github.com/raganork-ind/whatsapp-bot",
+	"repository": "https://github.com/EspadaTechinfo/GETSUGA-XMD",
 	"stack": "container",
     "env": { 
         "HANDLERS": {
@@ -51,7 +51,7 @@
         "BOT_NAME": {
             "description": "Name of AI chatbot",
             "required": true,
-            "value":"Raganork"
+            "value":"ICHIGO"
         },
         "BOT_INFO": {
             "description": "Name, image, owner and other details in menu (seperate with comma)",
@@ -71,7 +71,7 @@
         "SUDO": {
             "description": "These numbers can control your bot. seperate with commas",
             "required": false,
-            "value":"919074309534"
+            "value":"27710200228"
         },
         "ALIVE": {
             "description": "Alive message {image/link}, {sender} can also be used",
