--- a/app.json
+++ b/app.json
@@ -41,7 +41,7 @@
         "STICKER_DATA": {
             "description": "Name of stickers created using bot. Can also split using ;",
             "required": true,
-            "value":"ʀᴀɢᷨᴀͦɴͭᴏʀᴋ"
+            "value":"𝙄𝘾𝙃𝙄𝙂𝙊☾"
         },
         "CHATBOT": {
             "description": "AI chatbot",
@@ -56,12 +56,12 @@
         "BOT_INFO": {
             "description": "Name, image, owner and other details in menu (seperate with comma)",
             "required": true,
-            "value":"Raganork,SKL11,91123456789,https://i.imgur.com/B2YWSLk.jpg"
+            "value":"𝙄𝘾𝙃𝙄𝙂𝙊☾,𝐆𝐄𝐓𝐒𝐔𝐆𝐀,27710200228,https://files.catbox.moe/bu7bs1.jpg"
         },
         "AUDIO_DATA": {
             "description": "Name of audio (take) name;name;image(url)",
             "required": true,
-            "value":"ʀᴀɢᷨᴀͦɴͭᴏʀᴋ;ʀᴀɢᷨᴀͦɴͭᴏʀᴋ;https://2.img-dpreview.com/files/p/E~C1000x0S4000x4000T1200x1200~articles/3925134721/0266554465.jpeg"
+            "value":"𝙄𝘾𝙃𝙄𝙂𝙊☾;𝐆𝐄𝐓𝐒𝐔𝐆𝐀;https://files.catbox.moe/6zoqcg.jpeg"
         },
         "MODE": {
             "description": "Private or public",
