--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "raganork-md",
+  "name": "Getuga-md",
   "version": "5.0.0",
   "description": "A light weight WhatsApp bot.",
   "scripts": {
-    "start": "pm2 start . --attach --name Raganork"
+    "start": "pm2 start . --attach --name GETSUGA"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/souravkl11/raganork-md.git"
+    "url": "git+https://github.com/EspadaTechinfo/GETSUGA-XMD.git"
   },
   "overrides": {
-    "raganork-bot": {
+    "getsuga-bot": {
       "youtubei.js": "^2.5.3"
     }
   },
@@ -19,10 +19,10 @@
     "bot",
     "multi-device"
   ],
-  "author": "Sourav",
-  "developer": "@souravkl11",
+  "author": "SPHE",
+  "developer": "@5phesihle",
   "license": "GPL-3.0-or-later",
-  "homepage": "https://github.com/souravkl11/raganork#readme",
+  "homepage": "https://github.com/EspadaTechinfo/GETSUGA-XMD/blob/main/README.md",
   "dependencies": {
     "@adiwajshing/baileys": "git+https://github.com/souravkl11/Baileys.git",
     "@adiwajshing/keyed-db": "0.2.4",
